# speedrun-com-api

./: Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
src/: categories.rs  common.rs  games.rs  leaderboards.rs  lib.rs  main.rs  platforms.rs  regions.rs  runs.rs
src/platform/: native.rs  wasm.rs
