[package]
name = "speedrun-com-api"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.1"
futures-util-preview = "0.3.0-alpha.19"
http = "0.1.19"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
hyper-rustls = "0.19.0-alpha.3"
serde = { version = "1.0.94", features = ["derive"] }
serde_json = "1.0.40"
snafu = { version = "0.6.0", default-features = false, features = ["std"] }
url = "2.1.0"

# For the test app only
anyhow = "1.0.25"
tokio = { version = "0.2.0-alpha.6", default-features = false, features = ["macros", "rt-current-thread"] }
