[package]
name = "speedrun-com-api"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec =  { version = "0.5.1", features = ["serde"] }
bitflags = "1.2.1"
futures-util = { version = "0.3.1", default-features = false }
http = "0.2.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
snafu = { version = "0.6.0", default-features = false, features = ["std"] }
url = "2.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bytes = "0.5.2"
hyper = { git = "https://github.com/hyperium/hyper", default-features = false, features = ["tcp"] }
hyper-rustls = { git = "https://github.com/CryZe/hyper-rustls", branch = "hyper-0.13.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.31"
wasm-bindgen = "0.2.51"
wasm-bindgen-futures = "0.4.4"
web-sys = { version = "0.3.32", features = ["Response", "Window", "RequestInit", "AbortSignal", "ObserverCallback", "ReferrerPolicy", "RequestCache", "RequestCredentials", "RequestInit", "RequestMode", "RequestRedirect", "Headers"] }
